project(gvki)
cmake_minimum_required(VERSION 2.8.12)

###############################################################################
# Test supported compiler flags
###############################################################################
# TODO

###############################################################################
# Find OpenCL headers
###############################################################################
# TODO

###############################################################################
# Setup includes
###############################################################################
include_directories(${CMAKE_SOURCE_DIR}/include)

add_subdirectory(lib)
